plugins {
    id("java")
    id("org.jetbrains.kotlin.jvm") version "1.9.24" apply false
    id("com.gradleup.shadow") version "8.3.5" apply false
}

group = "org.labs"
version = "0.0.1"

extra["versions"] = mapOf(
    "junit" to "5.10.3",
    "lombok" to "1.18.36",
    "kotlin" to "1.9.24",
    "jackson" to "2.18.1",
    "intellijPlugin" to "1.17.4",
    "javaparser" to "3.25.4"
)

subprojects {
    apply(plugin = "java")
    if (name != "genesis-api") {
        apply(plugin = "org.jetbrains.kotlin.jvm")
    }

    repositories {
        mavenCentral()
    }

    java {
        toolchain {
            languageVersion.set(JavaLanguageVersion.of(21))
        }
    }

    val versions = rootProject.extra["versions"] as Map<*, *>

    dependencies {
        // Lombok
        compileOnly("org.projectlombok:lombok:${versions["lombok"]}")
        annotationProcessor("org.projectlombok:lombok:${versions["lombok"]}")

        implementation("org.jetbrains:annotations:24.0.1")
        implementation("com.github.javaparser:javaparser-core:${versions["javaparser"]}")


        // Testing
        testImplementation(platform("org.junit:junit-bom:${versions["junit"]}"))
        testImplementation("org.junit.jupiter:junit-jupiter")
        testImplementation("org.mockito:mockito-core:5.11.0")
        testImplementation("org.assertj:assertj-core:3.25.3")
        testImplementation("org.jetbrains.kotlin:kotlin-test:${versions["kotlin"]}")
        // JUnit Platform has its own version scheme; let the JUnit BOM align it with Jupiter.
        testRuntimeOnly("org.junit.platform:junit-platform-launcher")
    }

    tasks {
        test {
            useJUnitPlatform()
        }

        withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompile> {
            kotlinOptions.jvmTarget = "21"
        }
    }
}
